# Xipher.pro

./: .gitignore  README.md
xipher/: .gitignore  CMakeLists.txt  LICENSE  SECURITY.md  orders.db  update_topics.sql  xipher.env.example
xipher/.github/workflows/: codeql.yml  desktop.yml
xipher/android/: build.gradle.kts  gradle.properties  keystore.example.properties  settings.gradle.kts
xipher/android/app/: build.gradle.kts  google-services.example.json  proguard-rules.pro
xipher/android/gradle/: libs.versions.toml
xipher/desktop/: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
xipher/desktop/docs/: UpdateStrategy.md
xipher/desktop/qml/: Main.qml
xipher/desktop/src/: main.cpp
xipher/desktop/tests/: CMakeLists.txt  test_cookie_storage.cpp  test_dialog_service.cpp  test_integration.cpp  test_json_parsing.cpp  test_secure_storage.cpp  test_upload_limits.cpp  test_url_building.cpp
xipher/docs/MD/: migration_add_avatar_url.sql  migration_add_last_activity.sql  migration_add_message_features.sql  migration_add_message_reports.sql  migration_add_polls_channels_groups.sql  migration_add_read_receipts_delivery.sql  migration_add_saved_messages.sql  migration_backfill_channel_owners.sql  migration_channels_broadcast_v3.sql  migration_channels_supergroups_v2.sql  migration_public_directory.sql
xipher/include/auth/: auth_manager.hpp  password_hash.hpp
xipher/include/bots/: bot_scheduler.hpp  lite_bot_runtime.hpp  python_bot_executor.hpp
xipher/include/crypto/: e2ee.hpp  e2ee_manager.hpp
xipher/include/database/: db_connection.hpp  db_manager.hpp
xipher/include/notifications/: fcm_client.hpp  rustore_client.hpp
xipher/include/rtc/: rtc.hpp
xipher/include/security/: admin_security.hpp
xipher/include/server/: admin_handler.hpp  http_server.hpp  request_handler.hpp
xipher/include/storage/: in_memory_storage.hpp
xipher/include/utils/: json_parser.hpp  logger.hpp
xipher/include/voip/: audio_engine.hpp  jitter_buffer.hpp  lockfree_ring_buffer.hpp  nat_traversal.hpp  redis_signaling_bridge.hpp  signaling_manager.hpp  signaling_protocol.hpp  voip_access_control.hpp
xipher/installer/logrotate/: xipher-server
xipher/installer/systemd/: xipher-server.service  xipher-turn.service  xipher.env.example
xipher/scripts/: python_bot_runner.py  wallet_features_migration.sql  wallet_migration.sql
xipher/src/: main.cpp
xipher/src/auth/: auth_manager.cpp  password_hash.cpp
xipher/src/bots/: bot_scheduler.cpp  lite_bot_runtime.cpp  python_bot_executor.cpp
xipher/src/crypto/: e2ee.cpp  e2ee_manager.cpp
xipher/src/database/: db_connection.cpp  db_manager.cpp  db_manager_bot_builder.cpp  db_manager_bot_developers.cpp  db_manager_bot_files.cpp  db_manager_bot_runtime.cpp  db_manager_bot_scripts.cpp  db_manager_channels.cpp  db_manager_event_router.cpp  db_manager_friends.cpp  db_manager_groups.cpp  db_manager_integrations.cpp  db_manager_marketplace.cpp  db_manager_topics.cpp
xipher/src/notifications/: fcm_client.cpp  rustore_client.cpp
xipher/src/security/: admin_security.cpp
xipher/src/server/: admin_handler.cpp  http_server.cpp  request_handler.cpp  request_handler_api.cpp  request_handler_bot_api.cpp  request_handler_bot_builder.cpp  request_handler_e2ee.cpp  request_handler_event_router.cpp  request_handler_integrations.cpp  request_handler_marketplace.cpp  request_handler_wallet.cpp  request_handler_wallet_features.cpp
xipher/src/startup/: QUICK_START.md  README.md  build.sh  fix_channel_owner.sh  install_systemd.sh  orders.db  restart.sh  start.sh  status.sh  stop.sh
xipher/src/storage/: in_memory_storage.cpp
xipher/src/utils/: json_parser.cpp  logger.cpp
xipher/src/voip/: audio_engine.cpp  jitter_buffer.cpp  nat_traversal.cpp  redis_signaling_bridge.cpp  signaling_manager.cpp  signaling_protocol.cpp  voip_access_control.cpp
xipher/turn-service/: package-lock.json  package.json  server.js
xipher/uploads/files/: b99c30bf-69a3-4c54-9aef-fb87904fedf5_1767894206_3497.js  b99c30bf-69a3-4c54-9aef-fb87904fedf5_1768651161_7093.txt  b99c30bf-69a3-4c54-9aef-fb87904fedf5_1768779225_7787.txt
xipher/uploads/voices/: 00645a3c-a58e-4144-bf5d-f395819d9803_1764923655_1804289383.webm  00645a3c-a58e-4144-bf5d-f395819d9803_1764925642_1804289383.webm  00645a3c-a58e-4144-bf5d-f395819d9803_1764927043_3756.webm  00645a3c-a58e-4144-bf5d-f395819d9803_1764931504_8831.webm  00645a3c-a58e-4144-bf5d-f395819d9803_1764933250_3193.webm  00645a3c-a58e-4144-bf5d-f395819d9803_1764935116_1511.webm  00645a3c-a58e-4144-bf5d-f395819d9803_1764943771_7166.webm  70ba99da-2275-4ed2-829d-c8156ad9e36d_1766383751_6058.webm  7c1f1329-0743-4173-9bec-187d55491e82_1767959508_8540.webm  7c1f1329-0743-4173-9bec-187d55491e82_1768254483_1480.webm  7c1f1329-0743-4173-9bec-187d55491e82_1768254503_7961.webm  8a656d74-e02e-4966-b6dd-396f73308e97_1769042094_1964.webm  8a656d74-e02e-4966-b6dd-396f73308e97_1769042095_3511.webm  8a656d74-e02e-4966-b6dd-396f73308e97_1769042102_2101.webm  8a656d74-e02e-4966-b6dd-396f73308e97_1769097727_2960.webm  a707eb73-83c2-4a8c-b090-3611bdff563e_1768921571_5493.webm  a707eb73-83c2-4a8c-b090-3611bdff563e_1768921582_4043.webm  a707eb73-83c2-4a8c-b090-3611bdff563e_1768921589_6357.webm  a707eb73-83c2-4a8c-b090-3611bdff563e_1768921974_9149.webm  a707eb73-83c2-4a8c-b090-3611bdff563e_1768921977_3088.webm  a707eb73-83c2-4a8c-b090-3611bdff563e_1768921980_2037.webm  b99c30bf-69a3-4c54-9aef-fb87904fedf5_1764990887_9691.webm  b99c30bf-69a3-4c54-9aef-fb87904fedf5_1765194743_8494.webm  b99c30bf-69a3-4c54-9aef-fb87904fedf5_1765195452_5492.webm  b99c30bf-69a3-4c54-9aef-fb87904fedf5_1765195583_5060.webm  b99c30bf-69a3-4c54-9aef-fb87904fedf5_1765195680_6066.webm  b99c30bf-69a3-4c54-9aef-fb87904fedf5_1765195795_6031.webm  b99c30bf-69a3-4c54-9aef-fb87904fedf5_1765196105_5293.webm  b99c30bf-69a3-4c54-9aef-fb87904fedf5_1765196116_5998.webm  (+43 more)
xipher/web/: 404.html  admin-login.html  admin-reports.html  admin.html  api.html  bot-ide.html  bots.html  chat.html  firebase-messaging-sw.js  index.html  login.html  privacy.html  register.html  terms.html
xipher/web/css/: 404.css  (+10 more)
(+452 files in other folders)
